--- a/src/app/tech-talks/tech-talks.component.css
+++ b/src/app/tech-talks/tech-talks.component.css
@@ -20,3 +20,15 @@ h4{
 .rating-right p{
   font-size: 12px;
 }
+
+.top-block{
+  margin-bottom: 10px;
+}
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+.example-full-width {
+  width: 100%;
+}
