--- a/src/app/tech-talks/tech-talks.component.html
+++ b/src/app/tech-talks/tech-talks.component.html
@@ -2,22 +2,10 @@
 <mat-card class="top-block">
   <h2>Tech Talks</h2>
 
-  <form class="example-form">
-    <mat-form-field class="example-full-width">
-      <input matInput placeholder="Title" value="">
-    </mat-form-field>
-
-    <mat-form-field class="example-full-width">
-      <input matInput placeholder="Speaker" value="">
-    </mat-form-field>
-
-    <mat-checkbox>
-      High Rating
-    </mat-checkbox>
-  </form>
+ <app-filter></app-filter>
 </mat-card>
 
-<mat-card *ngFor='let item of items' class="talks-card">
+ <mat-card *ngFor='let item of items' class="talks-card">
   <div class="rating-left">
     <p>Rating</p>
     <p><b>{{item.rating}}</b></p>
