--- a/src/app/tech-talks/tech-talks.component.html
+++ b/src/app/tech-talks/tech-talks.component.html
@@ -2,7 +2,8 @@
 <mat-card class="top-block">
   <h2>Tech Talks</h2>
 
- <app-filter></app-filter>
+ <app-filter (notify)='onNotify($event)'></app-filter>
+ <!-- {{sometext}} -->
 </mat-card>
 
  <mat-card *ngFor='let item of items' class="talks-card">
